--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,120 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.description{
+.description {
     height: 400px;
     padding: 100px;
-    
+
+}
+
+.download-cta span {
+    font-size: 16px;
+    font-weight: 400;
+
+
+}
+
+.nav ul img {
+    margin: 0 auto;
+}
+
+.about-us-box {
+    margin-bottom: 10rem;
+    margin-top: 10rem;
+}
+
+
+/* Hamburger */
+
+
+.menu-content {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20%;
+    height: 100%;
+    background-color: #f7f7f7;
+    padding: 20px;
+    z-index: 1;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.ham-menu-links {
+    font-size: 12px;
+}
+
+.left-text-box h2 {
+    font-weight: 500;
+    font-size: 32px;
+}
+
+.dark {
+    background-color: #f7f7f7;
+}
+
+.right-btn-box.first {
+    display: flex;
+    width: 33%;
+    /* padding-left: 1rem; */
+    flex-wrap: wrap;
+    /* margin-left: 20px; */
+    gap: 20px;
+}
+
+.right-btn-box.first button {
+    background-color: white;
+    padding: 0.5rem 2rem;
+    border-radius: 5px;
+
+}
+
+.right-btn-box button {
+    background-color: #f7f7f7;
+    padding: 0.5rem 2rem;
+    border-radius: 5px;
+
+}
+
+,
+contact-details {
+    display: flex;
+    flex-direction: column;
+    /* gap: 50px; */
+    /* justify-content: center; */
+    /* justify-content: space-evenly; */
+    align-items: center;
+
+
+}
+
+.contact-details h2 {
+    font-size: 28px;
+    margin-top: 5rem;
+}
+
+.contact-box {
+    margin-top: 2.5rem;
+
+}
+
+.contact-box p {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+
+.contact-box ul li {
+    list-style: disc;
 }
