--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,9 @@ contact-details {
     list-style: disc;
 }
 
-
+.left-text-box {
+    padding-right: 25px;
+}
 
 @media (max-width: 768px) {
     .hero-container {
