added pages and routing

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer-links p {
-    font-weight: 500;
-    margin: bottom 5px;
+    font-weight: 600;
+    margin-bottom: 5px;
 }
 
 .footer-main {
