--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    font-family: 'Montserrat';
+}
+
 .description {
     height: 400px;
     padding: 100px;
@@ -87,16 +91,18 @@ li {
 
 }
 
-,
+
 contact-details {
     display: flex;
     flex-direction: column;
-    /* gap: 50px; */
-    /* justify-content: center; */
-    /* justify-content: space-evenly; */
+
     align-items: center;
 
 
+}
+
+.team-social {
+    left: 44%;
 }
 
 .contact-details h2 {
@@ -133,6 +139,22 @@ contact-details {
 
 .heading-clg {
     color: #4f59b7;
+}
+
+.offer-box {
+    padding: 0.5rem 0.75rem;
+    text-align: center;
+    border: 1px solid #f7f7f7;
+}
+
+.offer-read-more {
+    width: 100%;
+    background-color: #9a9a9a;
+    color: white;
+    padding: 0.25rem 1rem;
+    border-radius: 8px;
+    font-size: 13px;
+    margin-top: 15px;
 }
 
 @media (max-width: 768px) {
