--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ li {
 
 .right-btn-box.first {
     display: flex;
-    width: 33%;
+    width: 40%;
     /* padding-left: 1rem; */
     flex-wrap: wrap;
     /* margin-left: 20px; */
@@ -155,6 +155,19 @@ contact-details {
     border-radius: 8px;
     font-size: 13px;
     margin-top: 15px;
+}
+
+.page-banner {
+    background-image: url(../../assets/about-banner.jpg);
+    height: 41vh;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.page-banner h3 {
+    font-size: 34px;
+    font-weight: 600;
 }
 
 @media (max-width: 768px) {
