--- a/src/index.css
+++ b/src/index.css
@@ -162,6 +162,8 @@ li {
     height: 41vh;
     align-items: center;
     display: flex;
+    background-repeat: no-repeat;
+    background-size: cover;
     justify-content: center;
 }
 
