--- a/src/Components/College/College.css
+++ b/src/Components/College/College.css
@@ -49,4 +49,9 @@
     padding: 1rem 2rem;
     border: 1px solid #ded9d9;
     border-radius: 10px;
+    background-color: white;
+}
+
+.main-container {
+    background-color: #f7f7f7;
 }
