--- a/src/index.css
+++ b/src/index.css
@@ -251,8 +251,8 @@ li {
     }
 
     .hero-subtitle {
-        font-size: 2.75rem;
-        line-height: 50px;
+        font-size: 32px;
+        line-height: 39px;
         font-weight: 600;
     }
 
@@ -263,7 +263,16 @@ li {
         /* padding-left: 1rem; */
         flex-wrap: wrap;
         /* margin-left: 20px; */
-        gap: 15px;
+        gap: 9px;
+        padding: 10px;
+    }
+
+    .right-btn-box button {
+        background-color: #f7f7f7;
+        padding: 0.5rem 0.75rem;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        /* width: 100%; */
     }
 
     .heading-clg {
@@ -343,4 +352,14 @@ li {
         margin: 0 auto;
         margin-top: 2rem;
     }
+}
+
+@media (min-width: 769px) {
+    .feature-col {
+        width: 100%;
+    }
+}
+
+.contact-form::-webkit-scrollbar {
+    display: none;
 }
