--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,21 @@ body {
     font-family: 'Montserrat';
 }
 
+/* 
+@media(min-width: 1440px) {
+    .form-container {
+        height: 80vh !important;
+        margin-top: 2.5rem;
+    }
+} */
+
+@media(min-height: 900px) and (min-width: 1440px) {
+    .form-container {
+        height: 80vh !important;
+        margin-top: 2.5rem;
+    }
+}
+
 .description {
     height: 400px;
     padding: 100px;
@@ -18,6 +33,11 @@ body {
     font-weight: 400;
 
 
+}
+
+.page-title h5 {
+    font-size: 20px;
+    font-weight: 400;
 }
 
 .nav ul img {
@@ -69,8 +89,8 @@ li {
 }
 
 .right-btn-box.first {
-    display: flex;
-    width: 40%;
+
+
     /* padding-left: 1rem; */
     flex-wrap: wrap;
     /* margin-left: 20px; */
@@ -108,8 +128,8 @@ li {
 }
 
 .contact-details h2 {
-    font-size: 28px;
-    margin-top: 5rem;
+    font-size: 33px;
+    margin-top: 2rem;
 }
 
 .contact-box {
