--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,18 @@ body {
         height: 80vh !important;
         margin-top: 2.5rem;
     }
+
+    .text-wrapper {
+        margin: 0 8rem;
+    }
+
+    .left-text-box h2 {
+        width: 80% !important;
+    }
+
+    .left-text-box {
+        width: 35% !important;
+    }
 }
 
 .description {
@@ -89,11 +101,7 @@ li {
 }
 
 .right-btn-box.first {
-
-
-    /* padding-left: 1rem; */
     flex-wrap: wrap;
-    /* margin-left: 20px; */
     gap: 20px;
 }
 
@@ -110,17 +118,13 @@ li {
     padding: 0.5rem 2rem;
     border-radius: 5px;
     border: 1px solid #ccc;
-
 }
 
 
 .contact-details {
     display: flex;
     flex-direction: column;
-
     align-items: center;
-
-
 }
 
 .team-social {
@@ -210,6 +214,14 @@ li {
     font-weight: 600;
     font-size: 30px;
     margin-bottom: 0;
+}
+
+.cta-section {
+    margin: 10vh 0;
+}
+
+.main-service-container {
+    margin: 10vh 0;
 }
 
 @media (max-width: 768px) {
